api user list following, swagger docs
